# APHDE

./: IMPLEMENTATION_PLAN_APHDE.md  IMPLEMENTATION_PLAN_APHDE_UI_MODERNIZATION.md  IMPLEMENTATION_PLAN_APHDE_V2.md  IMPLEMENTATION_PLAN_APHDE_V3_FINAL.md  IMPLEMENTATION_PLAN_APHDE_V4_DOMAIN_AGNOSTIC.md  IMPLEMENTATION_PLAN_APHDE_V5_GOVERNANCE_OBSERVABILITY.md  IMPLEMENTATION_PLAN_APHDE_V6_BEHAVIORAL_GUIDANCE.md  IMPLEMENTATION_PLAN_STRATIFY_MULTI_USER_AUTH.md  PRD_APHDE.md  PRD_APHDE_UI_MODERNIZATION.md  PRD_APHDE_V2_CONFIDENCE.md  PRD_APHDE_V4_DOMAIN_AGNOSTIC.md  PRD_APHDE_V5_GOVERNANCE_OBSERVABILITY.md  PRD_APHDE_V6_BEHAVIORAL_GUIDANCE.md  PRD_STRATIFY_MULTI_USER_AUTH.md  README.md  V5_RELEASE_HANDOFF.md  package-lock.json  package.json  render.yaml
aphde/: .gitignore  README.md  pyproject.toml
aphde/app/: auth_ui.py  main.py  utils.py
aphde/app/components/: dashboard_sections.py
aphde/app/pages/: 01_goal_setup.py  01_log_input.py  02_goal_setup.py  02_log_input.py  03_decision_dashboard.py  04_action_center.py  05_insights_trends.py
aphde/app/services/: __init__.py  (+4 more)
aphde/docs/: PRD_APHDE_V3_CONTEXT.md  architecture.md  confidence-model.md  context-engine.md  decision-rules.md  demo-scenarios.md  domain-definition.md  release-notes-v4.md  release-notes-v5.1-ui-modernization.md  release-notes-v5.md  release-notes-v6-behavioral-guidance.md  ui-modernization-checklist.md  ui_data_contracts.md  v6_behavioral_guidance_contracts.md
aphde/scripts/: check_architecture_boundaries.py  init_db.py  run_demo_scenarios.py  seed_demo_data.py  verify_multi_user_migration.py
(+92 files in other folders)
