[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aphde"
version = "0.1.0"
description = "Adaptive Personal Health Decision Engine"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.41.0",
  "pydantic>=2.10.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.9.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
